# retch

./: Cargo.toml  README.md
.github/workflows/: docs.yaml
docs/: index.html
examples/: basic.rs
impit/: Cargo.toml
impit/src/: lib.rs
impit/src/http_headers/: mod.rs
impit/src/tls/: ffdhe.rs  mod.rs  statics.rs
src/: errors.rs  http3.rs  impit.rs  lib.rs  logger.rs  request.rs  retcher.rs  utils.rs
src/http_headers/: mod.rs  statics.rs
src/response_parsing/: mod.rs
src/tls/: mod.rs  statics.rs
