[package]
name = "retch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-client = "0.24.2"
hickory-proto = "0.24.2"
log = "0.4.22"
num-bigint = "0.4.6"
reqwest = { version = "0.12.7", features = ["json", "gzip", "brotli", "zstd", "deflate", "rustls-tls", "http3"] }
rustls = { version="0.23.16" }
tokio = { version="1.40.0", features = ["full"] }
url = "2.5.2"
webpki-roots = "0.26.6"

[dev-dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
rocket = "0.5.1"

[patch.crates-io]
h2 = { git = "https://github.com/retch-http/h2", branch = "retch-patch" }
rustls = { git = "https://github.com/retch-http/rustls", branch = "retch-patch" }
